<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">

    <ImageButton
        android:id="@+id/imageButton_rei"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_tama"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/food_reitou_syokuhin"
        android:contentDescription="@string/image_name1" />

    <ImageButton
        android:id="@+id/imageButton_tama"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_oni"
        app:layout_constraintVertical_bias="0.193"
        app:srcCompat="@drawable/food_oden_tamago"
        android:contentDescription="@string/image_name2" />

    <ImageButton
        android:id="@+id/imageButton_oni"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        app:srcCompat="@drawable/food_konbini_onigiri"
        android:contentDescription="@string/image_name3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_text1"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_oni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>